# MCP

./: CMakeLists.txt  README.md  test_ai_mcp.py  test_all.sh
common/: CMakeLists.txt
common/include/agent_rpc/common/: logger.h  types.h
common/src/: logger.cpp
docs/: mcp-plugin-development.md  rag-mcp-guide.md
examples/: CMakeLists.txt  ai_mcp_integration_example.cpp  rag_mcp_example.cpp
mcp_client/: CMakeLists.txt
mcp_client/include/agent_rpc/mcp/: mcp_agent_integration.h  mcp_client.h
mcp_client/include/agent_rpc/mcp/rag/: embedding_cache.h  embedding_service.h  tool_retriever.h  tool_validator.h  vector_index.h
mcp_client/src/: mcp_agent_integration.cpp  mcp_client.cpp  mcp_tool_manager.cpp
mcp_client/src/rag/: embedding_cache.cpp  embedding_service.cpp  tool_retriever.cpp  tool_validator.cpp  vector_index.cpp
mcp_server/: CMakeLists.txt  version.h.in
mcp_server/include/: base64.hpp  httplib.h
mcp_server/plugins/bacio-quote/: BacioQuote.cpp  CMakeLists.txt
mcp_server/plugins/calculator/: CMakeLists.txt  Calculator.cpp
mcp_server/plugins/code-review/: CMakeLists.txt  CodeReview.cpp
mcp_server/plugins/notification/: CMakeLists.txt  Notification.cpp
mcp_server/plugins/sleep/: CMakeLists.txt  Sleep.cpp
mcp_server/plugins/weather/: CMakeLists.txt  Weather.cpp
mcp_server/src/: main.cpp
mcp_server/src/interface/: ITransport.h  PluginAPI.h
mcp_server/src/loader/: PluginsLoader.cpp  PluginsLoader.h
mcp_server/src/server/: Server.cpp  Server.h
mcp_server/src/transport/: HttpStreamTransport.cpp  HttpStreamTransport.hpp  SseTransport.cpp  SseTransport.h  StdioTransport.cpp  StdioTransport.h
mcp_server/src/utils/: MCPBuilder.h  SessionBuilder.h  TSingleton.h
mcp_server/test/: configuration-sse.json  configuration-stdio-linux.json  configuration-stdio-macos.json  configuration-stdio-windows.json  requirements.txt  test-client-http.py  test-client-sse.py  test-client-stdio.py
