cmake_minimum_required(VERSION 3.20)

# MCP 客户端库（含 RAG-MCP 模块）
set(MCP_CLIENT_SOURCES
    src/mcp_client.cpp
    src/mcp_tool_manager.cpp
    src/mcp_agent_integration.cpp
    # RAG-MCP 源文件
    src/rag/embedding_service.cpp
    src/rag/embedding_cache.cpp
    src/rag/vector_index.cpp
    src/rag/tool_retriever.cpp
    src/rag/tool_validator.cpp
)

add_library(mcp_client STATIC ${MCP_CLIENT_SOURCES})

# 设置包含目录
target_include_directories(mcp_client PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

# 查找 jsoncpp
find_package(PkgConfig REQUIRED)
pkg_check_modules(JSONCPP REQUIRED jsoncpp)

# 链接依赖库
target_link_libraries(mcp_client PUBLIC
    mcp_common
)

target_link_libraries(mcp_client PRIVATE
    ${JSONCPP_LIBRARIES}
    Threads::Threads
    CURL::libcurl
)

target_include_directories(mcp_client PRIVATE ${JSONCPP_INCLUDE_DIRS})

# C++20 标准
target_compile_features(mcp_client PRIVATE cxx_std_20)

# 编译选项
if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    target_compile_options(mcp_client PRIVATE -Wall -Wextra -Wpedantic)
    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
        target_compile_options(mcp_client PRIVATE -g -O0)
    else()
        target_compile_options(mcp_client PRIVATE -O2 -DNDEBUG)
    endif()
endif()

# 安装规则
install(TARGETS mcp_client
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    RUNTIME DESTINATION bin
)

install(DIRECTORY include/agent_rpc/mcp/
    DESTINATION include/agent_rpc/mcp
    FILES_MATCHING PATTERN "*.h"
)
